<resources>

    <string name="video_play">播放</string>
    <string name="video_preview">试看</string>
    <string name="video_buy">购买</string>
    <string name="video_favorite">收藏</string>
    <string name="video_list">剧集列表</string>
    <string name="video_favorite_">已收藏</string>
    <string name="recommend_str">关联视频</string>
    <string name="movie_more">更\n\n多</string>
    <string name="more">更多内容</string>
    <string name="detail_page_type">类&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;型:&#160;</string>
    <string name="detail_page_level">分&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;级:&#160;</string>
    <string name="detail_page_area">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;区:&#160;</string>
    <string name="detail_page_time">上映时间:&#160;</string>
    <string name="detail_page_director">导&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;演:&#160;</string>
    <string name="detail_page_actor">演&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;员:&#160;</string>
    <string name="detail_page_episodes">集&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;数:&#160;</string>
    <string name="detail_page_introduction">简&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;介:&#160;</string>
    <string name="detail_page_length">时&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;长:&#160;</string>
    <string name="detail_page_presenter">主&#160;&#160;持&#160;&#160;人:&#160;</string>
    <string name="detail_page_guest">嘉&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;宾:&#160;</string>
    <string name="minute">分钟</string>
    <string name="update_to_episode">(更新至%1$d集)</string>
    <string name="yuan">￥</string>

    <string name="vod_bookmark_add_success">收藏成功</string>
    <string name="vod_bookmark_add_unsuccess">收藏失败</string>
    <string name="vod_bookmark_remove_success">取消收藏成功</string>
    <string name="vod_bookmark_remove_unsuccess">取消收藏失败</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
